--- a/app/src/main/res/layout/manuka_admin_fragment_product_statistics.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_product_statistics.xml
@@ -120,4 +120,9 @@
 
     </HorizontalScrollView>
 
+    <FrameLayout
+        android:id="@+id/snackbarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
