--- a/app/src/main/res/layout/category_grid.xml
+++ b/app/src/main/res/layout/category_grid.xml
@@ -9,23 +9,22 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="9dp"
-        app:cardUseCompatPadding="true">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="@dimen/_12sdp"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/gridCatImageSearch"
                 android:background="@color/colorWhite"
-                android:padding="32dp"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:scaleType="fitXY"
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp"
+                android:scaleType="centerInside"
                 android:contentDescription="@string/image" />
 
             <TextView
@@ -33,13 +32,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginBottom="4dp"
-                android:fontFamily="sans-serif-medium"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
-                android:textColor="#000000"
-                android:textSize="14sp"></TextView>
+                android:textAlignment="center"
+                android:textSize="@dimen/_10sdp"></TextView>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
