--- a/app/src/main/res/layout/toolbar_search.xml
+++ b/app/src/main/res/layout/toolbar_search.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorGreen"
-    android:elevation="4dp"
-    android:padding="@dimen/_8sdp"
+    android:padding="@dimen/_12sdp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
     <!-- Manuka -->
 
     <androidx.cardview.widget.CardView
-        android:background="@color/colorWhite"
-        app:cardCornerRadius="@dimen/_16sdp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite"
+        app:cardCornerRadius="@dimen/_16sdp">
 
         <LinearLayout
-            android:padding="@dimen/_8sdp"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite"
+            android:orientation="horizontal"
+            android:padding="@dimen/_8sdp">
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_baseline_search_24_toolbar"
                 android:drawablePadding="@dimen/_4sdp"
                 android:drawableTint="@color/colorBlackTextLite"
-                android:drawableStart="@drawable/ic_baseline_search_24_toolbar"
                 android:text="Search"
                 android:textColor="@color/colorBlackTextLite"
-                android:textSize="@dimen/_12sdp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
+                android:textSize="@dimen/_12sdp" />
 
         </LinearLayout>
 
