manuka - home, splash design updated

--- a/app/src/main/res/layout/manuka_activity_splash_main_app.xml
+++ b/app/src/main/res/layout/manuka_activity_splash_main_app.xml
@@ -4,53 +4,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#019575"
+    android:background="#007f63"
     tools:context=".ui.SplashMainAppActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/pattern_icon"
+        android:backgroundTint="#0D000000"
+        android:gravity="center">
 
         <LinearLayout
             android:id="@+id/linearlayoutSplashMain"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/pattern_icon"
-            android:backgroundTint="#0D000000"
-            android:layout_margin="10dp"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/_8sdp">
 
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_vertical"
-                android:foregroundGravity="left"
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp"
                 android:background="@drawable/icon_logo_notification"
                 android:contentDescription="@string/image" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_marginLeft="4dp"
-                android:layout_gravity="center_vertical"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="serif"
                     android:layout_gravity="start"
+                    android:fontFamily="serif"
                     android:text="@string/site_name"
                     android:textColor="@color/colorWhite"
-                    android:textSize="50sp"
+                    android:textSize="@dimen/_40sdp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="serif"
-                    android:layout_gravity="start"
                     android:text="@string/slogan"
                     android:textColor="@color/colorWhite"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/_12sdp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -58,3 +58,5 @@
         </LinearLayout>
 
     </LinearLayout>
+
+</LinearLayout>
