--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e6ecff"
+    android:background="@color/colorHome"
     android:orientation="vertical"
     tools:context=".ui.home.Home">
 
@@ -12,86 +12,80 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:cardElevation="9dp" >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:baselineAligned="false">
+        android:layout_height="wrap_content"
+        app:cardElevation="@dimen/_6sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:baselineAligned="false"
             android:orientation="horizontal">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/colorWhite"
-                android:drawableStart="@drawable/ic_baseline_location_on_24"
-                android:fontFamily="serif"
-                android:paddingStart="16dp"
-                android:textColor="@color/colorBlack"
-                android:paddingEnd="16dp"
-                android:text="@string/menu_location"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textSize="16sp"
-                style="?android:attr/borderlessButtonStyle"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/colorWhite"
+                    android:drawableStart="@drawable/ic_baseline_location_on_24"
+                    android:fontFamily="serif"
+                    android:paddingStart="@dimen/_16sdp"
+                    android:paddingEnd="@dimen/_16sdp"
+                    android:text="@string/menu_location"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorBlackText"
+                    android:textSize="@dimen/_12sdp" />
 
 
-            <TextView
-                android:layout_width="1dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_height="24dp"
-                android:background="#66000000" />
+                <TextView
+                    android:layout_width="@dimen/_1sdp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:background="@color/colorWhiteLite" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/colorWhite"
-                android:drawableStart="@drawable/ic_baseline_label_24"
-                android:fontFamily="serif"
-                android:paddingStart="16dp"
-                android:textColor="@color/colorBlack"
-                android:paddingEnd="16dp"
-                android:text="@string/menu_category"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textSize="16sp"
-                style="?android:attr/borderlessButtonStyle"/>
+                <Button
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/colorWhite"
+                    android:drawableStart="@drawable/ic_baseline_label_24"
+                    android:fontFamily="serif"
+                    android:paddingStart="@dimen/_16sdp"
+                    android:paddingEnd="@dimen/_16sdp"
+                    android:text="@string/menu_category"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorBlackText"
+                    android:textSize="@dimen/_12sdp" />
 
-            <TextView
-                android:layout_width="1dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_height="24dp"
-                android:background="#66000000" />
+                <TextView
+                    android:layout_width="@dimen/_1sdp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:background="@color/colorWhiteLite" />
 
-            <ImageView
-                android:layout_marginStart="10dp"
-                android:layout_margin="10dp"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:padding="10dp"
-                android:layout_gravity="center"
-                android:contentDescription="@string/image"
-                android:background="@drawable/icon_filter_24"
-                android:gravity="center"/>
+                <ImageView
+                    android:layout_width="@dimen/_24sdp"
+                    android:layout_height="@dimen/_24sdp"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/icon_filter_24"
+                    android:contentDescription="@string/image" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-
-    </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -106,10 +100,12 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/adMenuRecyclerView"
-                android:padding="@dimen/_6sdp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+                android:layout_height="match_parent"
+                android:padding="@dimen/_6sdp"></androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
+
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </LinearLayout>
