--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="colorDangerLight">#66F54336</color>
     <color name="colorWarning">#ffe066</color>
     <color name="colorHome">#e6ecff</color>
-    <color name="colorGreen">#00a884</color>
+    <color name="colorGreen">#009877</color>
     <color name="colorError">#FFAE0655</color>
     <color name="colorError2">#DE041E</color>
 
