--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,13 +34,13 @@
                     android:layout_weight="1"
                     android:background="@color/colorWhite"
                     android:drawableStart="@drawable/ic_baseline_location_on_24"
-                    android:fontFamily="serif"
+                    android:fontFamily="sans-serif"
                     android:paddingStart="@dimen/_16sdp"
                     android:paddingEnd="@dimen/_16sdp"
                     android:text="@string/menu_location"
                     android:textAllCaps="false"
-                    android:textColor="@color/colorBlackText"
-                    android:textSize="@dimen/_12sdp" />
+                    android:textColor="@color/colorBlackTextLite"
+                    android:textSize="@dimen/_14sdp" />
 
 
                 <TextView
@@ -52,19 +52,20 @@
                     android:background="@color/colorWhiteLite" />
 
                 <Button
+                    android:id="@+id/category_picker"
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@color/colorWhite"
                     android:drawableStart="@drawable/ic_baseline_label_24"
-                    android:fontFamily="serif"
+                    android:fontFamily="sans-serif"
                     android:paddingStart="@dimen/_16sdp"
                     android:paddingEnd="@dimen/_16sdp"
                     android:text="@string/menu_category"
                     android:textAllCaps="false"
-                    android:textColor="@color/colorBlackText"
-                    android:textSize="@dimen/_12sdp" />
+                    android:textColor="@color/colorBlackTextLite"
+                    android:textSize="@dimen/_14sdp" />
 
                 <TextView
                     android:layout_width="@dimen/_1sdp"
